--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <div class="container">
         <div class="songList"></div>
-        <h1>Best of NCS - No copyright Sounds</h1>
+        <h1>Top 10 Playlists</h1>
         <div class="songItemContainer">
             <div class="songItem">
                 <img alt="1">
